--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/postogram
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/simpleinstagram
 spring.datasource.username=root
 spring.datasource.password=root
