--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/simpleinstagram}
