--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/simpleinstagram}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/simpleinstagram
+spring.datasource.username=root
+spring.datasource.password=root
