--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,7 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password: password
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 11MB
